--- a/.github/workflows/binder.yml
+++ b/.github/workflows/binder.yml
@@ -11,17 +11,28 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     name: Run repo2docker
+    
+    permissions:
+      contents: write
+      packages: write
+      
     steps:
+      - name: checkout files in repo
+        uses: actions/checkout@v4
+        
+      - name: downcase repository name
+        run: |
+          echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
 
-    - name: checkout files in repo
-      uses: actions/checkout@v2
-
-    - name: update jupyter dependencies with repo2docker
-      uses: jupyterhub/repo2docker-action@master
-      with:
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        DOCKER_REGISTRY: ghcr.io
-        MYBINDERORG_TAG: ${{ github.event.ref }}
-        PUBLIC_REGISTRY_CHECK: true
+      # revert to jupyterhub/repo2docker-action once this is fixed: https://github.com/jupyterhub/repo2docker-action/pull/101
+      - name: update jupyter dependencies with repo2docker
+        uses: wragge/repo2docker-action@master
+        with:
+          DOCKER_USERNAME: ${{ github.actor }}
+          DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+          DOCKER_REGISTRY: ghcr.io
+          IMAGE_NAME: ${{ env.REPO }}
+          BINDER_CACHE: true
+          PUBLIC_REGISTRY_CHECK: true
